# pyDOMCFG

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  setup.cfg
.github/workflows/: ci.yaml
ci/: bare-environment.yml  docs.yml  environment.yml  upstream-dev-env.yml
docs/: conf.py  index.rst
docs/_static/DOMAINcfg_html/: annotated.html  calendar_8f90.html  classclosea.html  classclosea__coll__graph.map  classclosea__coll__graph.md5  classclosea_a5a6a2ed198f7a5d5886899ee4046dedb_icgraph.map  classclosea_a5a6a2ed198f7a5d5886899ee4046dedb_icgraph.md5  classclosea_aba832bc11dda76f0d9d93476448742fe_icgraph.map  classclosea_aba832bc11dda76f0d9d93476448742fe_icgraph.md5  classdom__oce.html  classdom__oce__coll__graph.map  classdom__oce__coll__graph.md5  classdom__oce_a42869b540973f7b73e7fb5f5f8c5fff4_icgraph.map  classdom__oce_a42869b540973f7b73e7fb5f5f8c5fff4_icgraph.md5  classdom__oce_a64bcd8aaa941cc655715e0b9ca2cae48_icgraph.map  classdom__oce_a64bcd8aaa941cc655715e0b9ca2cae48_icgraph.md5  classdomain.html  classdomain__coll__graph.map  classdomain__coll__graph.md5  classdomain_a262d4bd569c5e5bdbb47bd827b1decaa_cgraph.map  classdomain_a262d4bd569c5e5bdbb47bd827b1decaa_cgraph.md5  classdomain_a262d4bd569c5e5bdbb47bd827b1decaa_icgraph.map  classdomain_a262d4bd569c5e5bdbb47bd827b1decaa_icgraph.md5  classdomain_a5d1540e5f6a0a09babf0be8e11c25de6_cgraph.map  classdomain_a5d1540e5f6a0a09babf0be8e11c25de6_cgraph.md5  classdomain_a5d1540e5f6a0a09babf0be8e11c25de6_icgraph.map  classdomain_a5d1540e5f6a0a09babf0be8e11c25de6_icgraph.md5  classdomain_a66b3f8430223362d3c5e272d700874e6_icgraph.map  classdomain_a66b3f8430223362d3c5e272d700874e6_icgraph.md5  classdomcfg.html  classdomcfg__coll__graph.map  classdomcfg__coll__graph.md5  classdomcfg_a5e15a6d01e9de0dbd04f6ea1d571bfd5_cgraph.map  classdomcfg_a5e15a6d01e9de0dbd04f6ea1d571bfd5_cgraph.md5  classdomcfg_a5e15a6d01e9de0dbd04f6ea1d571bfd5_icgraph.map  classdomcfg_a5e15a6d01e9de0dbd04f6ea1d571bfd5_icgraph.md5  classdomcfg_af175c1deefd2e8d0bcc3b6bee51cc35a_icgraph.map  classdomcfg_af175c1deefd2e8d0bcc3b6bee51cc35a_icgraph.md5  classdomhgr.html  classdomhgr__coll__graph.map  (+705 more)
docs/developers/: contributing.rst  whats-new.rst
docs/users/: api.rst  installing.rst
pydomcfg/: __init__.py  accessor.py  utils.py
pydomcfg/domzgr/: sco.py  zco.py  zgr.py
pydomcfg/tests/: bathymetry.py  data.py  datasets.py  lib_for_rmax.py  test_accessor.py  test_placeholder.py  test_rmax_calc.py  test_sco.py  test_utils.py  test_zco.py
