[metadata]
name = pydomcfg
license = MIT
url = https://github.com/pyNEMO/pyDOMCFG

[options]
packages = pydomcfg
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools
    xarray
    numpy
setup_requires =
    setuptools
    setuptools_scm

[tool:pytest]
testpaths = pydomcfg/tests
addopts =
    -v
    --cov

[coverage:run]
omit = **/tests/*

[isort]
profile = black

[flake8]
max-line-length = 88
ignore =
    E203  # whitespace before ':' - doesn't work well with black
    W503  # line break before binary operator

[doc8]
max-line-length = 88

[darglint]
docstring_style = numpy

[mypy]
exclude = docs
files = pydomcfg/**/*.py
show_error_codes = True
ignore_missing_imports = True  # Same as pre-commit default
