[metadata]
name = pydomcfg
license = MIT
url = https://github.com/pyNEMO/pyDOMCFG

[options]
packages = pydomcfg
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools
    xarray
    numpy
setup_requires =
    setuptools
    setuptools_scm

[options.extras_require]
complete =
    f90nml

[tool:pytest]
testpaths = pydomcfg/tests
addopts =
    -v
    --cov

[coverage:run]
omit = **/tests/*

[isort]
profile = black

[flake8]
max-line-length = 88
ignore =
    E203  # whitespace before ':' - doesn't work well with black
    W503  # line break before binary operator

[doc8]
max-line-length = 88

[darglint]
# Ignore private and tests, retain __init__ and __call__
ignore_regex = ^(_|test_)(.*)(?<!__)$
docstring_style = numpy
# DAR402: Don't check raises
# DAR103: Don't check types. Seems buggy and slow (v1.8.0)
ignore = DAR402, DAR103

[mypy]
exclude = docs
files = pydomcfg/**/*.py
show_error_codes = True
ignore_missing_imports = False
