[metadata]
name = pydomcfg
license = MIT
url = https://github.com/pyNEMO/pyDOMCFG

[options]
packages = pydomcfg
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools
    xarray
    numpy
setup_requires =
    setuptools
    setuptools_scm
tests_require =
    pytest
    pooch

[options.extras_require]
complete =
    f90nml

[tool:pytest]
testpaths = pydomcfg/tests
addopts =
    -v
    --cov

[coverage:run]
omit = **/tests/*

[isort]
profile = black

[flake8]
max-line-length = 88
ignore =
    E203  # whitespace before ':' - doesn't work well with black
    W503  # line break before binary operator
exclude =
    pydomcfg/tests/data.py

[doc8]
max-line-length = 88

[darglint]
# Ignore private and tests, retain __init__ and __call__
ignore_regex = ^(_|test_)(.*)(?<!__)$
docstring_style = numpy
# DAR103: The docstring parameter type doesn't match function.
#         v1.8.0: Looks like is not working very well with numpy style
# DAR401: The docstring is missing an exception raised.
# DAR402: The docstring describes an exception not explicitly raised.
ignore = DAR103, DAR401, DAR402

[mypy]
exclude = docs
files = pydomcfg/**/*.py
show_error_codes = True
ignore_missing_imports = False
[mypy-f90nml.*]
ignore_missing_imports = True
[mypy-pooch.*]
ignore_missing_imports = True
